AUTOMAKE_OPTIONS=foreign
INCLUDES = -I/usr/local/include
noinst_PROGRAMS = mapedit
EXTRA_DIST= \
drawable/objs.png \
drawable/icon.png \
drawable/map.png \
drawable/btn_bottomcenter.png \
drawable/btn_middlecenter.png \
drawable/btn_save.png \
drawable/btn_vertiflip.png \
drawable/btn_bottomleft.png \
drawable/btn_middleleft.png \
drawable/btn_topcenter.png \
drawable/btn_bottomright.png \
drawable/btn_middleright.png \
drawable/btn_topleft.png \
drawable/btn_horizflip.png \
drawable/btn_resize.png \
drawable/btn_topright.png

mapedit_SOURCES = mapedit.c mapbox.c posbox.c res_map.c
mapedit_LDADD   = -lLCUI
